<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/neutral_01_black"
    android:paddingBottom="@dimen/dimen_4_dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_16_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_8_dp"
        android:background="@drawable/background_filter_focused"
        android:backgroundTint="@color/neutral_02_darkest_grey"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/dimen_6_dp"
        android:drawableTint="@color/neutral_05_light_grey"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:paddingHorizontal="@dimen/dimen_24_dp"
        android:textColorHint="@color/neutral_05_light_grey"
        app:layout_constraintEnd_toStartOf="@id/filterToggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/filterToggleButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dimen_16_dp"
        android:background="@drawable/ic_filter_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@id/searchEditText"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popularButton"
        style="@style/smallMontserrat_ButtonFocused"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_21_dp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:background="@drawable/background_filter_focused"
        android:paddingHorizontal="@dimen/dimen_12_dp"
        android:paddingVertical="@dimen/dimen_4_dp"
        android:text="@string/popular"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/topRatedButton"
        app:layout_constraintStart_toStartOf="@id/searchEditText"
        app:layout_constraintTop_toBottomOf="@id/searchEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/topRatedButton"
        style="@style/smallMontserrat_Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_8_dp"
        android:background="@drawable/background_filter_unfocused"
        android:paddingHorizontal="@dimen/dimen_12_dp"
        android:paddingVertical="@dimen/dimen_4_dp"
        android:text="@string/top_rated"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/popularButton"
        app:layout_constraintStart_toEndOf="@+id/popularButton"
        app:layout_constraintTop_toTopOf="@id/popularButton"
        app:layout_goneMarginStart="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/filterViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="topRatedButton, popularButton" />

</androidx.constraintlayout.widget.ConstraintLayout>